another ui change

--- a/car-rental-frontend/src/components/AddCar.css
+++ b/car-rental-frontend/src/components/AddCar.css
@@ -37,7 +37,7 @@
 }
 
 body {
-  background-image: url('/Users/muhammad/Desktop/Car_Rental_Final_Blockchain-1/car-rental-frontend/backgroundimage.jpeg');
+  background-image: url('/Users/muhammad/Desktop/Car_Rental_Final_Blockchain-1/car-rental-frontend/src/vivid-blurred-colorful-background.jpg');
   background-size: cover;
   background-position: center;
   color: #333;
