--- a/car-rental-frontend/src/components/Header.css
+++ b/car-rental-frontend/src/components/Header.css
@@ -1,9 +1,8 @@
 /* src/components/Header.css */
 
 .header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-  }
-  
+  background-color: rgba(93, 93, 93, 0.9); /* Light grey with 50% opacity */
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
